<?xml version="1.0"?>
<package>
    <name>roboteam_ai</name>
    <version>0.0.0</version>
    <description>The roboteam_ai package</description>

    <maintainer email="info@roboteamtwente.nl">info@roboteamtwente.nl</maintainer>
    <license>MIT</license>
    <url type="website">http://roboteamtwente.nl</url>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roboteam_msgs</build_depend>
    <build_depend>roboteam_utils</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>uuid_msgs</build_depend>
    <build_depend>unique_id</build_depend>
    <build_depend>qtbase5-dev</build_depend>
    <build_depend>roslaunch</build_depend>

    <run_depend>roboteam_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>rqt_gui</run_depend>
    <run_depend>rqt_gui_py</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>uuid_msgs</run_depend>
    <run_depend>unique_id</run_depend>
    <run_depend>libqt5-core</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
    </export>
</package>
